# playas

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AP Inversiones E y D S.A.S VS DIMAR y otros.md  CLAUDE.md  DESIGN.md  INGEST_ENCODING_FIX_PLAN.md  Makefile  PRODUCT.md  README.md  docker-compose.yml  firestore.indexes.json  firestore.rules  prompts_rag_jurisprudencia_playas_v2.md  prompts_rag_jurisprudencia_playas_v3.md  pyproject.toml  requirements.txt
.impeccable/: design.json
archivos-normativa/: Reglamento Maritimo Colombiano REMAC 5-DIMAR (202103).md  decreto-2324-de-1984.md
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: INGEST_ENCODING_BUG.md  Improvements.md  PLAN_INGESTA_NORMATIVA.md  SCRIPTS.md  architecture.md  archivos-indexados.md  bronze-silver-assets-plan.md  bronze-silver-sentencias-contract.md  firebase-config-manual.md  index.html
evaluation/: ragas_eval_gemma.py  ragas_eval_ollama.py
frontend/: .dockerignore  README.md  next.config.ts  package.json
infrastructure/: main.tf  outputs.tf
ingest/: config.py  llm_factory.py  loaders.py  metadata_csv.py  pyproject.toml  s3_client.py  sections_normativa.py  splitter_and_enrich.py
openspec/: config.yaml  skill-registry.md
rag/: __init__.py  config.py  pyproject.toml  s3_client.py
scripts/: deploy-tutorial-html.ps1  ec2_chroma_db.sh  ec2_ollama_embeddings.sh  install-docker-ubuntu.sh  migrate_feedback_ratings.py  run_pipeline.sh
src/: config.py
tests/: conftest.py
utils/: backfill_doc_type.py  backfill_doc_type_s3.py  bucket_backup.py  list_gemini_models.py  (+1 more)
(+133 files in other folders)
