[project]
name = "poe-rag"
version = "0.1.0"
description = "RAG system over Edgar Allan Poe's short stories"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.0",
    "langchain>=0.3",
    "langchain-google-genai>=3.0",
    "langchain-chroma>=1.0",
    "langchain-ollama>=0.2",
    "langchain-docling>=2.0",
    "google-genai>=1.0",
    "chromadb>=1.0",
    "rank-bm25>=0.2",
    "gradio>=5.0",
    "ragas>=0.4",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "integration: tests that require live external services (Chroma, Ollama, Gemini)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]
